[gd_scene load_steps=9 format=2]

[ext_resource path="res://Dialog Box/dialogbox.gd" type="Script" id=1]
[ext_resource path="res://Dialog Box/dialogboxbutton.gd" type="Script" id=2]
[ext_resource path="res://Dialog Box/Dialog Option Arrow.png" type="Texture" id=3]
[ext_resource path="res://Dialog Box/dialogboxlabel.gd" type="Script" id=4]
[ext_resource path="res://Dialog Faces/Avatar Face.png" type="Texture" id=5]
[ext_resource path="res://Dialog Box/facecontainer.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Show Text"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="DialogBox" type="CanvasLayer"]
visible = false
script = ExtResource( 1 )

[node name="DialogBox Container" type="ColorRect" parent="."]
margin_left = 244.0
margin_top = 299.0
margin_right = 460.0
margin_bottom = 351.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 249.0
margin_top = 305.0
margin_right = 594.0
margin_bottom = 372.0
rect_scale = Vector2( 0.55, 0.55 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
text = "012345678901234567890123456789012345678901 012345678901234567890123456789012345678901"
autowrap = true
percent_visible = 0.0
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
anims/RESET = SubResource( 1 )
"anims/Show Text" = SubResource( 2 )

[node name="Button1" type="Button" parent="."]
visible = false
margin_left = 257.0
margin_top = 329.0
margin_right = 352.0
margin_bottom = 349.0
rect_scale = Vector2( 0.45, 0.45 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../Button3")
focus_neighbour_bottom = NodePath("../Button2")
focus_next = NodePath("../Button3")
focus_previous = NodePath(".")
text = "Button 1"
flat = true
align = 0
script = ExtResource( 2 )

[node name="OptionArrow1" type="TextureRect" parent="Button1"]
visible = false
margin_left = -10.0
margin_top = 4.0
margin_right = 54.0
margin_bottom = 68.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 257.0
margin_top = 339.0
margin_right = 417.0
margin_bottom = 359.0
rect_scale = Vector2( 0.45, 0.45 )
focus_neighbour_left = NodePath("../Button3")
focus_neighbour_top = NodePath("../Button1")
focus_neighbour_right = NodePath("../Button4")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../Button4")
focus_previous = NodePath("../Button3")
text = "Button 2 hello helle"
flat = true
align = 0
script = ExtResource( 2 )

[node name="OptionArrow2" type="TextureRect" parent="Button2"]
visible = false
margin_left = -10.0
margin_top = 4.0
margin_right = 54.0
margin_bottom = 68.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 356.0
margin_top = 329.0
margin_right = 451.0
margin_bottom = 349.0
rect_scale = Vector2( 0.45, 0.45 )
focus_neighbour_left = NodePath("../Button1")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../Button2")
focus_neighbour_bottom = NodePath("../Button4")
focus_next = NodePath("../Button2")
focus_previous = NodePath("../Button1")
text = "Button 3"
flat = true
align = 0
script = ExtResource( 2 )

[node name="OptionArrow3" type="TextureRect" parent="Button3"]
visible = false
margin_left = -10.0
margin_top = 4.0
margin_right = 54.0
margin_bottom = 68.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = 356.0
margin_top = 339.0
margin_right = 451.0
margin_bottom = 359.0
rect_scale = Vector2( 0.45, 0.45 )
focus_neighbour_left = NodePath("../Button2")
focus_neighbour_top = NodePath("../Button3")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../Button2")
text = "Button 4"
flat = true
align = 0
script = ExtResource( 2 )

[node name="OptionArrow4" type="TextureRect" parent="Button4"]
visible = false
margin_left = -10.0
margin_top = 4.0
margin_right = 54.0
margin_bottom = 68.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="FaceContainer" type="ColorRect" parent="."]
visible = false
margin_left = 202.0
margin_top = 299.0
margin_right = 243.0
margin_bottom = 351.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="FaceContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 38.0
margin_bottom = 38.0
color = Color( 0.705882, 0.74902, 0.490196, 1 )

[node name="FaceTexture" type="TextureRect" parent="FaceContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 38.0
margin_bottom = 38.0
texture = ExtResource( 5 )

[node name="SpeakerName" type="Label" parent="FaceContainer"]
margin_left = 3.0
margin_top = 40.0
margin_right = 61.0
margin_bottom = 54.0
rect_scale = Vector2( 0.55, 0.55 )
text = "You"

[connection signal="animation_finished" from="Label/AnimationPlayer" to="Label" method="_on_AnimationPlayer_animation_finished"]
[connection signal="focus_entered" from="Button1" to="Button1" method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button1" to="Button1" method="_on_Button_focus_exited"]
[connection signal="focus_entered" from="Button2" to="Button2" method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button2" to="Button2" method="_on_Button_focus_exited"]
[connection signal="focus_entered" from="Button3" to="Button3" method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button3" to="Button3" method="_on_Button_focus_exited"]
[connection signal="focus_entered" from="Button4" to="Button4" method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button4" to="Button4" method="_on_Button_focus_exited"]
